--- a/file_test.yml
+++ b/file_test.yml
@@ -1,6 +1,15 @@
 ---
 - name: touch files test
   hosts: target
+  gather_facts: True
+  tasks:
+  - name: ping test
+    ping:
+
+- name: touch files test
+  hosts: target
+  remote_user: root
+  gather_facts: False
   tasks:
   - name: create directory
     file:
