--- a/file_test.yml
+++ b/file_test.yml
@@ -13,7 +13,7 @@
   tasks:
   - name: create directory
     file:
-      path: /home/worker/test
+      path: /home/ansible/test
       state: directory
 
   - name: touch file
