--- a/var_test2.yml
+++ b/var_test2.yml
@@ -3,7 +3,7 @@
   hosts: all
   tasks:
   - name: capture output of id command
-    command: id -
+    command: id -Z
     register: login
 
   - debug:
