--- a/loop_create_file.yml
+++ b/loop_create_file.yml
@@ -14,6 +14,7 @@
   - name: create file
     file:
       path: "{{ file_path }}/{{ item }}.txt"
+      state: touch
     loop:
     - first
     - second
