--- a/package_install.yml
+++ b/package_install.yml
@@ -3,14 +3,19 @@
   hosts: 192.168.0.6
   gather_facts: False
   tasks:
+  - name: Collect only selected facts
+    setup:
+      filter:
+      - 'ansible_distribution'
+  
   - name: Install Apache2 package
     apt:
       name: apache2, php
       state: present
-    when: ansible_facts[ "os_family" ] == "Debian"
+    when: ansible_facts[ "ansible_distribution" ] == "Ubuntu"
     
   - name: Install Httpd package
     yum:
       name: httpd, php
       state: present
-    when: ansible_facts[ "os_family" ] == "Redhat"
+    when: ansible_facts[ "ansible_distribution" ] == "CentOS"
