--- a/package_install.yml
+++ b/package_install.yml
@@ -13,6 +13,8 @@
   
   - name: Install Apache2 package
     apt:
+      upgrade: yes
+      update_cache: yes
       name: apache2, php
       state: present
     when: ansible_facts[ "distribution" ] == "Ubuntu"
