--- a/include_test.yml
+++ b/include_test.yml
@@ -4,7 +4,7 @@
   remote_user: root
   tasks:
   - name: include task
-    include: task.yml
+    include_tasks: task.yml
     vars:
       path: /etc/ansible
     register: result_task
