--- a/include_test.yml
+++ b/include_test.yml
@@ -6,7 +6,7 @@
   - name: include task
     include_tasks: task.yml
     vars:
-      path: /etc/ansible
+      path: /etc
     register: result_task
     
   - debug:
