--- a/task.yml
+++ b/task.yml
@@ -5,3 +5,10 @@
   
 - debug:
     msg: "{{ result.stdout }}"
+    
+- name: " install {{ package }}"
+  apt:
+    name: "{{ package }}"
+    state: latest
+    update_cache: yes
+
