--- a/handler_test.yml
+++ b/handler_test.yml
@@ -4,16 +4,20 @@
   handlers:
     - name: stop message
       debug:
-        msg: stop play
+        msg: " stop {{ taskname }} "
         
         
   tasks:
     - name: excute ls
       shell: ls
+        var:
+          taskname: ls
       notify: 
         - stop message
         
     - name: status sshd
       shell: systemctl status sshd
+        var:
+          taskname: sshd
       notify:
         - stop message
