--- a/handler_test.yml
+++ b/handler_test.yml
@@ -1,23 +1,28 @@
 ---
 - name: handler test
   hosts: 192.168.0.108
-  handlers:
-    - name: stop message
-      debug:
-        msg: " stop {{ taskname }} "
-        
-        
   tasks:
     - name: excute ls
       shell: ls
       vars:
         taskname: ls
       notify: 
-        - stop message
+        - "my handler"
         
     - name: status sshd
       shell: systemctl status sshd
       vars:
         taskname: sshd
       notify:
-        - stop message
+        - "my handler"
+  
+  handlers:
+    - name: echo
+      debug:
+        msg: echo handler message
+      listen: "my handler"
+      
+    - name: stop message
+      debug:
+        msg: stop task
+      listen: "my handler"
